--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -40,6 +40,7 @@
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer;
+  z-index: -2;
 }
 
 
@@ -93,14 +94,12 @@
 .topbar input:checked + .menu .hamburger {
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
-  
 }
 
 .topbar input:checked + .menu .hamburger:after {
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
   bottom: 0;
-  
 }
 
 .topbar input:checked + .menu .hamburger:before {
@@ -110,18 +109,22 @@
   
 }
 
-.topbar input:checked + .menu + ul { opacity: 1; }
-
 .topbar ul {
   position: absolute;
   top: 50px;
   left: -30px;
   z-index: 200;
   opacity: 0;
-  -webkit-transition: .25s 0s ease-in-out;
-  transition: .25s 0s ease-in-out;
+  -webkit-transition: opacity .5s 0s ease-in-out;
+  transition: opacity .5s 0s ease-in-out;
   list-style-type: none;
   font-size: 1.2em;
+  transform: translateX(-200px);
+}
+
+.topbar input:checked + .menu + ul {
+  opacity: 1;
+  transform: translateX(0px);
 }
 
 .topbar li {
